# brents_solution

./: .gitignore  CMakeLists.txt  README.md  main.c
functions/: hash_functions.c  prime_functions.c
headers/: datas_and_structures.h  hash_functions.h  prime_functions.h
